SKCMS-2980: added rule

--- a/crc/modules/rules
+++ b/crc/modules/rules
@@ -27,6 +27,9 @@ import leg;
   else
     "%02d%02b%02y";
 
+export %failtext%(String text, Int actual) =
+  concat(text, format_int(actual, " %d"));
+    
 export %failtext_int%(String text, Int actual, Int limit) =
   concat(text, format_int(actual, " %d"), 
     format_int(limit, "[%d]"));
