SKCMS-2883: Updated jboss start stop commands

--- a/pipelines/templates/carmusr_deploy.yml
+++ b/pipelines/templates/carmusr_deploy.yml
@@ -148,7 +148,7 @@ stages:
             inputs:
               targetType: 'inline'
               script: |
-                  sudo systemctl stop jboss;
+                  sudo systemctl stop jboss-eap-rhel;
             displayName: 'Stop Jboss'
         deploy:
           steps:
@@ -165,7 +165,7 @@ stages:
             inputs:
               targetType: 'inline'
               script: |
-                  sudo systemctl start jboss;
+                  sudo systemctl start jboss-eap-rhel;
             displayName: 'Start Jboss after deployment'
 
           - task: Bash@3
