--- a/bids_user/dev/docker/jboss/config/jeppesen-config/vacation.properties
+++ b/bids_user/dev/docker/jboss/config/jeppesen-config/vacation.properties
@@ -16,7 +16,7 @@ vacation.implementation-path=
 #
 # Default Home URL mappings
 #
-crewweb.url-mapping-vacation=com.jeppesen.carmen.crewweb.vacation.customization.urlmapping.ClearCacheIndexURLMapping
+crewweb.url-mapping-index=com.jeppesen.carmen.crewweb.vacation.urlmapping.IndexURLMapping
 
 vacation.crewinfo.simple.template-file=simple_crewinfo.html
 vacation.crewinfo.detailed.template-file=detailed_crewinfo.html
