SKCMS-3209: Modified the properties file to map new servers

--- a/bids_user/jboss-files/resources/career.properties
+++ b/bids_user/jboss-files/resources/career.properties
@@ -38,11 +38,11 @@ career.career-widget-file=career-widget
 # Default URL for the JMP XML RPC service.
 # 
 crewweb.backendconfiguration-file=backendconfiguration_career.xml
-cp_manpower.DEFAULT=@carmen.config.subsystems.jmp.cp_manpower_f@
-cp_manpower.F=@carmen.config.subsystems.jmp.cp_manpower_f@
-cp_manpower.C=@carmen.config.subsystems.jmp.cp_manpower_c@
+cp_manpower.DEFAULT=http://cweutcmsst03.flysas.com:11102/RPC2
+cp_manpower.F=http://cweutcmsst03.flysas.com:11102/RPC2
+cp_manpower.C=http://cweutcmsst03.flysas.com:11103/RPC2
 
-cp_manpower_assignments.DEFAULT=@carmen.config.subsystems.jmp.cp_manpower_f@
-cp_manpower_assignments.F=@carmen.config.subsystems.jmp.cp_manpower_f@
-cp_manpower_assignments.C=@carmen.config.subsystems.jmp.cp_manpower_c@
-cp_publish.DEFAULT=@cp_publish@
+cp_manpower_assignments.DEFAULT=http://cweutcmsst03.flysas.com:11102/RPC2
+cp_manpower_assignments.F=http://cweutcmsst03.flysas.com:11102/RPC2
+cp_manpower_assignments.C=http://cweutcmsst03.flysas.com:11103/RPC2
+cp_publish.DEFAULT=http://cweutcmsin01.sasuat.local:11002/RPC2
