used git merge CheckPR.yml

--- a/.github/workflows/CheckPR.yml
+++ b/.github/workflows/CheckPR.yml
@@ -8,13 +8,18 @@ jobs:
    steps:
      - name: Checkout code
        uses: actions/checkout@v2
+       with:
+         fetch-depth: 0
      - name: Detect conflicts
        id: conflict
        run: |
-         if git diff --quiet HEAD remotes/origin/${{ github.base_ref }}; then
-           echo "No conflicts detected"
+         git fetch origin ${{ github.head_ref }}
+         git checkout ${{ github.head_ref }}
+         git merge origin/${{ github.base_ref }} --no-commit --no-ff
+         if [ $? -eq 0 ]; then
+           echo "No conflicts detected."
            echo "::set-output name=conflict::false"
          else
-           echo "Conflicts detected"
+           echo "Conflicts detected."
            echo "::set-output name=conflict::true"
          fi
