--- a/.github/workflows/CheckPR.yml
+++ b/.github/workflows/CheckPR.yml
@@ -13,10 +13,7 @@ jobs:
      - name: Detect conflicts
        id: conflict
        run: |
-         git fetch origin ${{ github.head_ref }}
-         git checkout ${{ github.head_ref }}
-         git merge origin/${{ github.base_ref }} --no-commit --no-ff
-         if [ $? -eq 0 ]; then
+         if git merge --no-commit --no-ff ${{ github.event.pull_request.head.ref }}; then
            echo "No conflicts detected."
            echo "::set-output name=conflict::false"
          else
