--- a/.github/workflows/CheckPR.yml
+++ b/.github/workflows/CheckPR.yml
@@ -13,7 +13,7 @@ jobs:
      - name: Detect conflicts
        id: conflict
        run: |
-         if git merge --no-commit --no-ff ${{ github.event.pull_request.head.ref }}; then
+         if git merge --no-commit --no-ff origin/${{ github.event.pull_request.head.ref }}; then
            echo "No conflicts detected."
            echo "::set-output name=conflict::false"
          else
