--- a/.github/workflows/CheckPR.yml
+++ b/.github/workflows/CheckPR.yml
@@ -1,19 +1,25 @@
-name: Conflict Resolution
+name: Handle Conflicts from Specific Branch
 on:
- pull_request:
-   types: [opened, synchronize]
+ pull_request_target:
+  types: [opened, synchronize, reopened]
 jobs:
- detect-conflict:
+ check-branch:
    runs-on: ubuntu-latest
    steps:
      - name: Checkout code
        uses: actions/checkout@v2
        with:
-         fetch-depth: 0
-     - name: Detect conflicts
-       id: conflict
+         ref: ${{ github.event.pull_request.head.ref }}
+         repository: ${{ github.event.pull_request.head.repo.full_name }}
+         token: ${{ secrets.GITHUB_TOKEN }}
+     - name: Check for conflicts
+       id: check-conflict
        run: |
-         if git merge --no-commit --no-ff origin/${{ github.event.pull_request.head.ref }}; then
+         # Attempt to merge the head branch into the base branch
+         git fetch origin ${{ github.event.pull_request.head.ref }}
+         git checkout ${{ github.event.pull_request.base.ref }}
+         git merge origin/${{ github.event.pull_request.head.ref }} --no-commit --no-ff
+         if [ $? -eq 0 ]; then
            echo "No conflicts detected."
            echo "::set-output name=conflict::false"
          else
