--- a/.github/workflows/CheckPR.yml
+++ b/.github/workflows/CheckPR.yml
@@ -17,7 +17,7 @@ jobs:
        run: |
          # Attempt to merge the head branch into the base branch
          git fetch origin ${{ github.event.pull_request.head.ref }}
-         git checkout ${{ github.event.pull_request.base.ref }}
+         git checkout origin/${{ github.event.pull_request.base.ref }}
          git merge origin/${{ github.event.pull_request.head.ref }} --no-commit --no-ff
          if [ $? -eq 0 ]; then
            echo "No conflicts detected."
