--- a/.github/workflows/CheckPR.yml
+++ b/.github/workflows/CheckPR.yml
@@ -16,9 +16,9 @@ jobs:
        id: check-conflict
        run: |
          # Attempt to merge the head branch into the base branch
-         git fetch origin ${{ github.event.pull_request.head.ref }}
-         git checkout origin/${{ github.event.pull_request.base.ref }}
-         git merge origin/${{ github.event.pull_request.head.ref }} --no-commit --no-ff
+         # git fetch origin ${{ github.event.pull_request.head.ref }}
+         # git checkout origin/${{ github.event.pull_request.base.ref }}
+         git merge  --no-commit --no-ff origin/${{ github.event.pull_request.head.ref }}
          if [ $? -eq 0 ]; then
            echo "No conflicts detected."
            echo "::set-output name=conflict::false"
