--- a/.github/workflows/CheckPR.yml
+++ b/.github/workflows/CheckPR.yml
@@ -1,28 +1,23 @@
-name: Handle Conflicts from Specific Branch
+name: Conflict Resolution
 on:
  pull_request_target:
-  types: [opened, synchronize, reopened]
+   types: [opened, synchronize]
 jobs:
- check-branch:
+ resolve-conflict:
    runs-on: ubuntu-latest
    steps:
      - name: Checkout code
        uses: actions/checkout@v2
        with:
-         ref: ${{ github.event.pull_request.head.ref }}
-         repository: ${{ github.event.pull_request.head.repo.full_name }}
-         token: ${{ secrets.GITHUB_TOKEN }}
-     - name: Check for conflicts
-       id: check-conflict
+         ref: ${{ github.event.pull_request.head.sha }} # Checkout the head branch of the pull request
+     - name: Detect conflicts
+       id: detect-conflicts
        run: |
-         # Attempt to merge the head branch into the base branch
-         git fetch origin ${{ github.event.pull_request.head.ref }}
-         git checkout ${{ github.event.pull_request.base.ref }}
-         git merge --no-commit --no-ff origin/${{ github.event.pull_request.head.ref }}
-         if [ $? -eq 0 ]; then
-           echo "No conflicts detected."
-           echo "::set-output name=conflict::false"
-         else
-           echo "Conflicts detected."
-           echo "::set-output name=conflict::true"
-         fi
+         # Your conflict detection logic here
+         # Set an output variable if conflicts are detected
+         # Example:
+          if git merge --no-commit --no-ff ${{ github.event.pull_request.head.ref }}; then
+            echo "::set-output name=conflict::false"
+          else
+            echo "::set-output name=conflict::true"
+          fi
