--- a/.github/workflows/CheckPR.yml
+++ b/.github/workflows/CheckPR.yml
@@ -16,7 +16,7 @@ jobs:
          # Your conflict detection logic here
          # Set an output variable if conflicts are detected
          # Example:
-          if git merge --no-commit --no-ff ${{ github.event.pull_request.head.ref }}; then
+          if git merge --no-commit --no-ff origin/${{ github.event.pull_request.head.ref }}; then
             echo "::set-output name=conflict::false"
           else
             echo "::set-output name=conflict::true"
