--- a/.github/workflows/checkPR.yml
+++ b/.github/workflows/checkPR.yml
@@ -16,6 +16,8 @@ jobs:
          # Your conflict detection logic here
          # Set an output variable if conflicts are detected
          # Example:
+          git fetch origin ${{ github.event.pull_request.head.ref }}
+          git checkout ${{ github.event.pull_request.base.ref }}
           if git merge --no-commit --no-ff origin/${{ github.event.pull_request.head.ref }}; then
             echo "::set-output name=conflict::false"
           else
