--- a/.github/workflows/CheckPR.yml
+++ b/.github/workflows/CheckPR.yml
@@ -16,6 +16,8 @@ jobs:
          # Your conflict detection logic here
          # Set an output variable if conflicts are detected
          # Example:
+          echo "::set-output name=${{ github.event.pull_request.head.ref }}"
+          echo "::set-output name=${{ github.event.pull_request.base.ref }}"
           git fetch origin ${{ github.event.pull_request.head.ref }}
           git checkout ${{ github.event.pull_request.base.ref }}
           if git merge --no-commit --no-ff origin/${{ github.event.pull_request.head.ref }}; then
