--- a/.github/workflows/CheckPR.yml
+++ b/.github/workflows/CheckPR.yml
@@ -1,22 +1,27 @@
 name: Conflict Resolution
 on:
- pull_request:
+ pull_request_target:
    types: [opened, synchronize]
 jobs:
- detect-conflict:
+ resolve-conflict:
    runs-on: ubuntu-latest
    steps:
      - name: Checkout code
        uses: actions/checkout@v2
        with:
-         fetch-depth: 0
+         ref: ${{ github.event.pull_request.head.sha }} # Checkout the head branch of the pull request
      - name: Detect conflicts
-       id: conflict
+       id: detect-conflicts
        run: |
-         if git merge --no-commit --no-ff origin/${{ github.event.pull_request.head.ref }}; then
-           echo "No conflicts detected."
-           echo "::set-output name=conflict::false"
-         else
-           echo "Conflicts detected."
-           echo "::set-output name=conflict::true"
-         fi
+         # Your conflict detection logic here
+         # Set an output variable if conflicts are detected
+         # Example:
+          echo "::set-output name=${{ github.event.pull_request.head.ref }}"
+          echo "::set-output name=${{ github.event.pull_request.base.ref }}"
+          git fetch origin ${{ github.event.pull_request.head.ref }}
+          git checkout ${{ github.event.pull_request.base.ref }}
+          if git merge --no-commit --no-ff origin/${{ github.event.pull_request.head.ref }}; then
+            echo "::set-output name=conflict::false"
+          else
+            echo "::set-output name=conflict::true"
+          fi
