--- a/.github/workflows/CheckPR.yml
+++ b/.github/workflows/CheckPR.yml
@@ -9,17 +9,18 @@ jobs:
      - name: Checkout code
        uses: actions/checkout@v2
        with:
-         ref: ${{ github.event.pull_request.head.sha }} # Checkout the head branch of the pull request
+        ref: main
+         # ref: ${{ github.event.pull_request.head.sha }} # Checkout the head branch of the pull request
+
+     - name: Pull Latest Change
+       run: git pull origin main
+
+     - name: Checkout Base Branch
+       run: git checkout ${{ github.event.pull_request.base.ref }}
+       
      - name: Detect conflicts
        id: detect-conflicts
        run: |
-         # Your conflict detection logic here
-         # Set an output variable if conflicts are detected
-         # Example:
-          echo "::set-output name=${{ github.event.pull_request.head.ref }}"
-          echo "::set-output name=${{ github.event.pull_request.base.ref }}"
-          git fetch origin ${{ github.event.pull_request.head.ref }}
-          git checkout ${{ github.event.pull_request.base.ref }}
           if git merge --no-commit --no-ff origin/${{ github.event.pull_request.head.ref }}; then
             echo "::set-output name=conflict::false"
           else
