--- a/.github/workflows/checkPR.yml
+++ b/.github/workflows/checkPR.yml
@@ -16,7 +16,7 @@ jobs:
        run: git pull origin main
 
      - name: Checkout Base Branch
-       run: git checkout ${{ github.event.pull_request.base.ref }}
+       run: git checkout origin/${{ github.event.pull_request.base.ref }}
        
      - name: Detect conflicts
        id: detect-conflicts
