--- a/.github/workflows/checkPR.yml
+++ b/.github/workflows/checkPR.yml
@@ -15,6 +15,9 @@ jobs:
      - name: Pull Latest Change
        run: git pull origin main
 
+     - name: debug
+       run: echo "${{ github.event.pull_request.base.ref }}"
+
      - name: Checkout Base Branch
        run: git checkout origin/${{ github.event.pull_request.base.ref }}
        
