--- a/.github/workflows/CheckPR.yml
+++ b/.github/workflows/CheckPR.yml
@@ -14,7 +14,10 @@ jobs:
 
      - name: Pull Latest Change
        run: git pull origin main
-
+       
+     - name: debug
+       run: echo "${{ github.event.pull_request.base.ref }}"
+       
      - name: Checkout Base Branch
        run: git checkout origin/${{ github.event.pull_request.base.ref }}
        
