--- a/.github/workflows/CheckPR.yml
+++ b/.github/workflows/CheckPR.yml
@@ -19,7 +19,7 @@ jobs:
        run: echo "${{ github.event.pull_request.base.ref }}"
        
      - name: Checkout Base Branch
-       run: git checkout origin/${{ github.event.pull_request.base.ref }}
+       run: git checkout origin ${{ github.event.pull_request.base.ref }}
        
      - name: Detect conflicts
        id: detect-conflicts
