--- a/.github/workflows/CheckPR.yml
+++ b/.github/workflows/CheckPR.yml
@@ -1,31 +1,24 @@
-name: Conflict Resolution
+name: Conflict Detection
 on:
  pull_request_target:
    types: [opened, synchronize]
 jobs:
- resolve-conflict:
+ check-conflict:
    runs-on: ubuntu-latest
    steps:
      - name: Checkout code
        uses: actions/checkout@v2
        with:
-        ref: main
-         # ref: ${{ github.event.pull_request.head.sha }} # Checkout the head branch of the pull request
-
-     - name: Pull Latest Change
-       run: git pull origin main
-       
-     - name: debug
-       run: echo "${{ github.event.pull_request.base.ref }}"
-       
-     - name: Checkout Base Branch
-       run: git checkout origin ${{ github.event.pull_request.base.ref }}
-       
-     - name: Detect conflicts
-       id: detect-conflicts
+         ref: ${{ github.event.pull_request.head.ref }}
+     - name: Checkout target branch
+       run: git checkout ${{ github.event.pull_request.base.ref }}
+     - name: Merge feature branch into target branch
        run: |
-          if git merge --no-commit --no-ff origin/${{ github.event.pull_request.head.ref }}; then
-            echo "::set-output name=conflict::false"
-          else
-            echo "::set-output name=conflict::true"
-          fi
+         git merge --no-commit --no-ff ${{ github.event.pull_request.head.ref }}
+         if git diff --exit-code; then
+           echo "No conflicts detected"
+         else
+           echo "Conflicts detected"
+           # You can perform additional actions here, such as failing the workflow or notifying stakeholders
+           exit 1
+         fi
