--- a/.github/workflows/checkPR.yml
+++ b/.github/workflows/checkPR.yml
@@ -9,9 +9,11 @@ jobs:
      - name: Checkout code
        uses: actions/checkout@v2
        with:
-         ref: ${{ github.event.pull_request.head.ref }}
+         ref: main
+     
      - name: Checkout target branch
        run: git checkout ${{ github.event.pull_request.base.ref }}
+       
      - name: Merge feature branch into target branch
        run: |
          git merge --no-commit --no-ff ${{ github.event.pull_request.head.ref }}
