--- a/.github/workflows/CheckPR.yml
+++ b/.github/workflows/CheckPR.yml
@@ -9,7 +9,7 @@ jobs:
      - name: Checkout code
        uses: actions/checkout@v2
        with:
-         ref: ${{ github.event.pull_request.head.ref }}
+         ref: main
      - name: Checkout target branch
        run: git checkout ${{ github.event.pull_request.base.ref }}
      - name: Merge feature branch into target branch
