--- a/.github/workflows/CheckPR.yml
+++ b/.github/workflows/CheckPR.yml
@@ -11,7 +11,7 @@ jobs:
        with:
          ref: main
      - name: Checkout target branch
-       run: git checkout ${{ github.event.pull_request.base.ref }}
+       run: git checkout AutomatedBranchingWF
      - name: Merge feature branch into target branch
        run: |
          git merge --no-commit --no-ff ${{ github.event.pull_request.head.ref }}
