--- a/.github/workflows/checkPR.yml
+++ b/.github/workflows/checkPR.yml
@@ -12,7 +12,7 @@ jobs:
          ref: main
      
      - name: Checkout target branch
-       run: git checkout ${{ github.event.pull_request.base.ref }}
+       run: git checkout AutomatedBranchingWF
        
      - name: Merge feature branch into target branch
        run: |
