--- a/.github/workflows/checkPR.yml
+++ b/.github/workflows/checkPR.yml
@@ -9,10 +9,7 @@ jobs:
      - name: Checkout code
        uses: actions/checkout@v2
        with:
-         ref: main
-     
-     - name: Checkout target branch
-       run: git checkout AutomatedBranchingWF
+         ref: ${{ github.event.pull_request.base.ref }}
        
      - name: Merge feature branch into target branch
        run: |
