--- a/.github/workflows/CheckPR.yml
+++ b/.github/workflows/CheckPR.yml
@@ -9,9 +9,8 @@ jobs:
      - name: Checkout code
        uses: actions/checkout@v2
        with:
-         ref: main
-     - name: Checkout target branch
-       run: git checkout AutomatedBranchingWF
+         ref: ${{ github.event.pull_request.base.ref }}
+       
      - name: Merge feature branch into target branch
        run: |
          git merge --no-commit --no-ff ${{ github.event.pull_request.head.ref }}
