--- a/.github/workflows/checkPR.yml
+++ b/.github/workflows/checkPR.yml
@@ -8,11 +8,11 @@ jobs:
    steps:
      - name: Checkout code
        uses: actions/checkout@v2
-       with:
-         ref: ${{ github.event.pull_request.base.ref }}
        
      - name: Merge feature branch into target branch
        run: |
+         git fetch origin ${{ github.event.pull_request.base.ref }}:${{ github.event.pull_request.base.ref }}
+         git checkout ${{ github.event.pull_request.base.ref }}
          git merge --no-commit --no-ff ${{ github.event.pull_request.head.ref }}
          if git diff --exit-code; then
            echo "No conflicts detected"
