--- a/.github/workflows/checkPR.yml
+++ b/.github/workflows/checkPR.yml
@@ -11,7 +11,7 @@ jobs:
        
      - name: Merge feature branch into target branch
        run: |
-         git fetch origin ${{ github.event.pull_request.base.ref }}:${{ github.event.pull_request.base.ref }}
+         git fetch origin ${{ github.event.pull_request.base.ref }}
          git checkout ${{ github.event.pull_request.base.ref }}
          git merge --no-commit --no-ff ${{ github.event.pull_request.head.ref }}
          if git diff --exit-code; then
