--- a/.github/workflows/checkPR.yml
+++ b/.github/workflows/checkPR.yml
@@ -13,7 +13,7 @@ jobs:
        run: |
          git fetch origin ${{ github.event.pull_request.base.ref }}
          git checkout ${{ github.event.pull_request.base.ref }}
-         git merge --no-commit --no-ff ${{ github.event.pull_request.head.ref }}
+         git merge --no-commit --no-ff origin/${{ github.event.pull_request.head.ref }}
          if git diff --exit-code; then
            echo "No conflicts detected"
          else
